[package]
name = "hyper-risk-engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
description = "Enterprise-grade risk engine with sub-100μs latency for quantitative trading"
authors = ["HyperPhysics Team"]
keywords = ["risk", "trading", "finance", "hft", "quantitative"]
categories = ["algorithms", "finance"]

[lib]
name = "hyper_risk_engine"
path = "src/lib.rs"

[features]
default = ["simd"]
simd = []                    # Portable SIMD for fast-path operations
gpu = ["wgpu", "bytemuck"]   # GPU acceleration for slow-path Monte Carlo
full = ["simd", "gpu"]       # All features

[dependencies]
# Core mathematical libraries
nalgebra = { version = "0.34", features = ["serde-serialize"] }
ndarray = { version = "0.15", features = ["rayon", "serde"] }
num-traits = "0.2"
statrs = "0.17"

# Concurrency & lock-free structures (LMAX Disruptor pattern)
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "6.1"

# Parallelism
rayon = "1.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & tracing
tracing = "0.1"

# Random number generation (for Monte Carlo)
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"

# Optional GPU support
wgpu = { version = "0.20", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
approx = "0.5"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "fast_path_latency"
harness = false

[[bench]]
name = "evt_streaming"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
module_name_repetitions = "allow"
