[package]
name = "hyper-risk-engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
description = "Enterprise-grade risk engine with sub-100μs latency for quantitative trading"
authors = ["HyperPhysics Team"]
keywords = ["risk", "trading", "finance", "hft", "quantitative"]
categories = ["algorithms", "finance"]

[lib]
name = "hyper_risk_engine"
path = "src/lib.rs"

[features]
default = ["simd"]
simd = []                    # Portable SIMD for fast-path operations
gpu = ["wgpu", "bytemuck"]   # GPU acceleration for slow-path Monte Carlo
similarity = ["hyperphysics-similarity", "hyperphysics-lsh"] # HNSW + MinHash pattern detection
ml = ["hyperphysics-ml"]     # ML forecasting models (N-HiTS, DeepAR)
active-inference = ["active-inference-agent"] # Free Energy Principle for conscious decisions

# CWTS - Complex Weighted Trading System integrations
cwts-autopoiesis = ["autopoiesis"] # Self-organizing systems, boundary maintenance, emergence
cwts-game-theory = ["game-theory-engine"] # Nash equilibrium, multi-agent coordination
cwts-physics = ["rapier-hyperphysics"] # Market-physics bridge, simulation
cwts-nautilus = ["hyperphysics-nautilus"] # NautilusTrader execution bridge, backtest
cwts-neural = ["hyperphysics-neural-trader"] # Neural forecasting, ensemble prediction
cwts-full = ["cwts-autopoiesis", "cwts-game-theory", "cwts-physics", "cwts-nautilus", "cwts-neural"]

full = ["simd", "gpu", "similarity", "ml", "active-inference", "cwts-full"] # All features

[dependencies]
# Market data integration
hyperphysics-market = { path = "../hyperphysics-market" }

# Core mathematical libraries
nalgebra = { version = "0.34", features = ["serde-serialize"] }
ndarray = { version = "0.15", features = ["rayon", "serde"] }
num-traits = "0.2"
statrs = "0.17"

# Async runtime
async-trait = "0.1"
futures = "0.3"

# Concurrency & lock-free structures (LMAX Disruptor pattern)
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "6.1"

# Parallelism
rayon = "1.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & tracing
tracing = "0.1"

# Random number generation (for Monte Carlo)
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"

# Cryptographic hashing (for BFT consensus signatures)
sha2 = "0.10"

# Optional GPU support
wgpu = { version = "0.20", optional = true }
bytemuck = { version = "1.14", features = ["derive"], optional = true }

# Optional similarity search (HNSW + LSH for pattern detection)
hyperphysics-similarity = { path = "../hyperphysics-similarity", optional = true }
hyperphysics-lsh = { path = "../hyperphysics-lsh", optional = true }

# Optional ML forecasting (N-HiTS, DeepAR)
hyperphysics-ml = { path = "../hyperphysics-ml", optional = true, default-features = false, features = ["cpu", "std"] }

# Optional Active Inference (Free Energy Principle)
# Note: We disable default features to avoid pulling in hyperphysics-unified via reasoning-backends
active-inference-agent = { path = "../active-inference-agent", optional = true, default-features = false }

# CWTS - Complex Weighted Trading System dependencies
# Autopoiesis: self-organizing systems with boundary maintenance
autopoiesis = { path = "../autopoiesis/autopoiesis", optional = true, default-features = false, features = ["engines", "finance"] }

# Game Theory: Nash equilibrium, multi-agent coordination, Machiavellian tactics
game-theory-engine = { path = "../game-theory-engine", optional = true, default-features = false }

# Physics Bridge: Market-physics simulation via Rapier
rapier-hyperphysics = { path = "../physics-engines/rapier-hyperphysics", optional = true }

# Nautilus Integration: Execution bridge, backtesting
hyperphysics-nautilus = { path = "../hyperphysics-nautilus", optional = true, default-features = false }

# Neural Trader: Ensemble forecasting, uncertainty quantification
hyperphysics-neural-trader = { path = "../hyperphysics-neural-trader", optional = true, default-features = false }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
approx = "0.5"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "fast_path_latency"
harness = false

[[bench]]
name = "evt_streaming"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
module_name_repetitions = "allow"
