[package]
name = "hyperphysics-agency"
version = "0.1.0"
edition = "2021"
authors = ["HyperPhysics Team"]
description = "Cybernetic agency framework: Free Energy Principle, IIT Φ, and hyperbolic consciousness"
license = "MIT"
repository = "https://github.com/yourusername/HyperPhysics"
keywords = ["consciousness", "free-energy", "agency", "cybernetics", "hyperbolic"]
categories = ["science", "mathematics", "algorithms"]

[features]
default = ["full"]
full = ["quantum", "sentry", "visualization"]
quantum = []  # Quantum knowledge system integration (future)
sentry = []  # Dilithium Sentry integration
visualization = ["dep:plotters"]

[dependencies]
# Core dependencies - NO HyperPhysics dependencies to avoid cycles
nalgebra = "0.33"
ndarray = { version = "0.16", features = ["rayon", "serde"] }
rand = "0.8"
rand_distr = "0.4"
rayon = "1.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Optional dependencies
plotters = { version = "0.3", optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"
proptest = "1.5"

[lints]
workspace = true
